Add react-obj-view dependency and integrate DataView component into DevTool
- Added `react-obj-view` as a dependency in package.json.
- Created DataView component for rendering object views.
- Updated DevToolContainer to accept a custom Component prop.
- Modified DevToolState to utilize the new DataView component.
- Removed unused JSONView component and related code.
- Added StateLabelRender for enhanced state key rendering.

--- a/src/dev-tool/DevTool.css
+++ b/src/dev-tool/DevTool.css
@@ -1,8 +1,8 @@
 :root {
     color-scheme: light dark;
-    --jv-color: light-dark(#333b3c, #efefec);
-    --jv-bg-color: light-dark(#f9f9f9, #212121);
-    --jv-change-color: rgb(255, 50, 0);
+    --rs-color: light-dark(#333b3c, #efefec);
+    --rs-bg-color: light-dark(#f9f9f9, #212121);
+    --rs-change-color: rgb(255, 50, 0);
 }
 
 .react-state-dev-btn {
@@ -22,9 +22,9 @@
 
     align-items: stretch;
     font-size: 12px;
-    color: var(--jv-color);
-    background-color: var(--jv-bg-color);
-    border-top: solid var(--jv-color) 1px;
+    color: var(--rs-color);
+    background-color: var(--rs-bg-color);
+    border-top: solid var(--rs-color) 1px;
     position: fixed;
     bottom: 0px;
     right: 0px;
@@ -97,8 +97,8 @@
 
                 &.state-key-updated {
                     transition: border-color 0.00s;
-                    border-color: var(--jv-change-color);
-                    background-color: color-mix(in srgb, var(--jv-change-color) 20%, transparent);
+                    border-color: var(--rs-change-color);
+                    background-color: color-mix(in srgb, var(--rs-change-color) 20%, transparent);
                 }
 
                 .state-key-name {
@@ -132,135 +132,3 @@
     }
 }
 
-.jv-root {
-
-    font-family: monospace;
-    user-select: none;
-    background-color: var(--jv-bg-color);
-
-    .jv-name {
-        opacity: 0.8;
-    }
-
-    .jv-type {
-        opacity: 0.5;
-        font-size: smaller;
-        padding-inline: 0.4em;
-    }
-
-    .jv-value {
-        word-wrap: break-word;
-    }
-
-    .jv-cursor {
-        cursor: pointer;
-    }
-
-    .jv-field {
-        margin-block: 1px;
-    }
-
-    .jv-field .jv-field {
-
-        >:first-child>:first-child>.jv-name,
-        >.jv-name {
-            transition: background-color 1s;
-            background-color: #0000;
-        }
-
-        &.jv-updated>:first-child>:first-child>.jv-name,
-        &.jv-updated>.jv-name {
-            transition: background-color 0.00s;
-            background-color: var(--jv-change-color);
-        }
-    }
-
-    .jv-field-obj>.jv-value {
-        padding-inline-start: 1.5em;
-        margin-inline-start: 0.2em;
-        border-inline-start: solid 1px #8888;
-        transition: border-color 1s;
-    }
-
-    .jv-field .jv-field-obj.jv-updated>.jv-value {
-        border-color: var(--jv-change-color);
-        transition: border-color 0.00s;
-    }
-
-    .jv-field-obj>:first-child>:first-child>.jv-name {
-        cursor: pointer;
-    }
-
-
-    .jv-field-obj {
-        --lv: 0;
-    }
-
-    .jv-field-obj .jv-field-obj {
-        --lv: 1;
-    }
-
-    .jv-field-obj .jv-field-obj .jv-field-obj {
-        --lv: 2;
-    }
-
-    .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj {
-        --lv: 3;
-    }
-
-    .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj {
-        --lv: 4;
-    }
-
-    .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj {
-        --lv: 5;
-    }
-
-    .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj {
-        --lv: 6;
-    }
-
-    .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj .jv-field-obj {
-        --lv: 7;
-    }
-
-    .jv-field-obj>:first-child {
-        container-type: scroll-state;
-        position: sticky;
-        top: calc(var(--lv, 0) * 1.5em);
-        line-height: 1.5;
-        z-index: calc(10 - var(--lv, 0));
-
-        @container scroll-state(stuck: top) {
-            >div {
-                background-color: var(--jv-bg-color);
-                border-bottom: solid 1px #8884;
-                font-weight: bold;
-            }
-
-        }
-    }
-
-
-
-
-    .jv-field-string> :is(.jv-type, .jv-value) {
-        color: orange;
-    }
-
-    .jv-field-number> :is(.jv-type, .jv-value) {
-        color: red;
-    }
-
-    .jv-field-boolean> :is(.jv-type, .jv-value) {
-        color: #08f;
-    }
-
-    .jv-field-function> :is(.jv-type, .jv-value) {
-        color: #08f;
-    }
-
-    .jv-preview {
-        opacity: 0.5;
-    }
-}
